update: add new endpoint
