# openapi.yaml
@@ -86,6 +86,41 @@ paths:
               example:
                 status: healthy
 
+  /api/dev2prod:
+    get:
+      tags:
+        - API Info
+      summary: Dev2Prod course status
+      description: Check the status of the Dev2Prod course
+      security: []
+      responses:
+        '200':
+          description: Dev2Prod course status
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "Dev2prod course completed!"
+              example:
+                status: "Dev2prod course completed!"
+      security: []
+      responses:
+        '200':
+          description: API is healthy
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: healthy
+              example:
+                status: healthy
+
   /api/auth/register:
     post:
       tags:
